# NexusTask

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  FEATURES.md  GITHUB_SETUP.md  LICENSE  README.md  SHORT_DESCRIPTION.txt  deploy.sh
.github/: DESCRIPTION.md
.github/workflows/: ci.yml
examples/: advanced_examples.cpp  advanced_features_demo.cpp  demo.cpp  distributed_demo.cpp  more_features_demo.cpp  new_features_demo.cpp  performance_test.cpp  regression_tests.cpp  resource_management_demo.cpp
include/task_engine/: config.hpp  dependency_graph.hpp  distributed_executor.hpp  health_monitor.hpp  metrics_exporter.hpp  performance_monitor.hpp  rate_limiter.hpp  resource_monitor.hpp  task.hpp  task_batch.hpp  task_cache.hpp  task_chain.hpp  task_engine.hpp  task_executor.hpp  task_group.hpp  task_preemptor.hpp  task_queue.hpp  task_scheduler.hpp  test_framework.hpp  thread_pool.hpp
src/: dependency_graph.cpp  distributed_executor.cpp  performance_monitor.cpp  task_executor.cpp  task_queue.cpp  thread_pool.cpp
tests/: unit_tests.cpp
